--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
         }
     },
      "extra": {
+        "branch-alias": {
+            "dev-main": "1.0.x-dev"
+        },
         "laravel": {
             "providers": [
                 "JiraRestApi\\JiraRestApiServiceProvider"
